# libidroplink

./: .gitignore  .indent.pro  .travis.yml  Makefile.am  Makefile.in  README.md  configure  configure.ac
src/: libidroplink.c  utils.c  utils.h
src/idroplink/: libidroplink.h
tests/: libidroplink_tests.c
